# challenge

./: .env.example  .gitignore  AGENTS.md  NOTES.md  README.md  SESSION.md  pyproject.toml
.github/workflows/: ci.yml
data/change-management/: change-management-policy.md  control.md
evals/: README.md  golden.jsonl
output/change-management/claude/: control.json  report.html
output/change-management/gemini/: control.json  report.html
output/change-management/openai/: control.json  report.html
output/independent-code-review/claude/: control.json  report.html
output/independent-code-review/gemini/: control.json  report.html
output/independent-code-review/openai/: control.json  report.html
output/user-access-review/claude/: control.json  report.html
output/user-access-review/gemini/: control.json  report.html
output/user-access-review/openai/: control.json  report.html
src/: README.md
src/audit_agent/: __init__.py  cli.py  eval_runner.py  html_report.py  pipeline.py  pricing.py  schemas.py  trace.py  xlsx_workpaper.py
src/audit_agent/control/: __init__.py  loader.py
src/audit_agent/evidence/: __init__.py  reconciler.py  router.py  screenshot.py  xlsx_parser.py
src/audit_agent/judge/: __init__.py  attribute_judge.py  verifier.py
src/audit_agent/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  retry.py
src/audit_agent/prompts/: attribute_judge.md  control_extraction.md  screenshot_extraction.md  verifier.md
tests/: conftest.py  test_ipe.py  test_narrative.py  test_reconciler.py
(+57 files in other folders)
