[project]
name = "bead-audit-agent"
version = "0.1.0"
description = "Generic AI audit agent — Bead take-home challenge"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
    "pydantic>=2.9.0",
    "openpyxl>=3.1.5",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "json-repair>=0.30.0",
]

[project.scripts]
bead-agent = "audit_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
